# PyAstLean

./: .gitignore  CLAUDE.md  Libraries.lean  PyAstLean.lean  PyAstLeanTest.lean  README.md  lake-manifest.json  lakefile.toml  py2lean.lean  pyproject.toml
.github/workflows/: lean_action_ci.yml
Libraries/: Registry.lean
Libraries/math/: Mapping.lean  MathDef.lean  TheoremsMath.lean
Libraries/numpy/: Analysis.lean  Creation.lean  Mapping.lean  NumpyDef.lean  Statistics.lean  TheoremsNumpy.lean
Libraries/scipy/: Mapping.lean  ScipyDef.lean
PyAstLean/: Attributes.lean  Basic.lean  Codegen.lean  ConstantGen.lean  PyAPI.lean  PyGens.lean
PyAstLean/PyAPI/: BuiltinRegistry.lean  Builtins.lean  Core.lean  Input.lean  Lists.lean  Operators.lean  PyPrint.lean  Sets.lean  UnsupportedLinter.lean
PyAstLean/PyGens/: Assign.lean  Basic.lean  CallExpr.lean  Comments.lean  ControlFlow.lean  Exceptions.lean  FuncDef.lean  Imports.lean  ListComp.lean  Match.lean  Subscript.lean  UseCases.lean  Utils.lean  test.lean
PyAstLeanTest/: Fiddle.lean  MiniRegex.lean  PyAPI.lean  PyAstLeanCheck.lean
PyAstLeanTest/PyAPI/: TestBuiltins.lean  TestCasting.lean  TestInput.lean  TestStringManipulations.lean  TestStrings.lean
cp_harness/: .gitignore  README.md  _errcount.py  _measure.py  convert.py  evaluate.py  fetch.py  run_all.sh
docs/: phases.md
example_scripts/commands/: README.md
example_scripts/showcase/: cnn.lean  cnn.py  eg0.lean  eg0.py  eg1.lean  (+7 more)
src/: annotate_python.py  evaluate_dataset.py  fetch_codecontests.py  node_visitor.py  py2lean.py  test.py  toplevel_state.py
(+76 files in other folders)
